@@ -59,16 +59,16 @@
     highlight-symbol-mode (lambda () (highlight-symbol-mode 1)))
   (when window-system
     (global-highlight-symbol-mode t))
-  (setq highlight-symbol-idle-delay 0.5)
+  (setq highlight-symbol-idle-delay 0)
   (global-set-key [(control f3)] 'highlight-symbol-at-point)
   (global-set-key [f3] 'highlight-symbol-next)
   (global-set-key [(shift f3)] 'highlight-symbol-prev)
   (global-set-key [(meta f3)] 'highlight-symbol-query-replace))
-(defadvice highlight-symbol-mode-post-command
-  (around gud-tooltip-mouse-motion activate)
-  "Hack for gud-tooltip-mode."
-  (if (not (eq this-command 'gud-tooltip-mouse-motion))
-      ad-do-it))
+;; (defadvice highlight-symbol-mode-post-command
+;;   (around gud-tooltip-mouse-motion activate)
+;;   "Hack for gud-tooltip-mode."
+;;   (if (not (eq this-command 'gud-tooltip-mouse-motion))
+;;       ad-do-it))
 
 
 ;;; ifdef setting
